--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <div class="col-lg-3 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="100ms">
                     <div class="service-item text-center">
                         <i class="icon-briefcase"></i>
-                        <h3><span>Online Branding</span></h3>
-                        <p>Tell your product's story to engage users and boost conversions.</p>
+                        <h3><span>Smart Contract Dev</span></h3>
+                        <p>Articulate Your Smart Contract's Story to Engage Stakeholders.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="300ms">
