--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="row about-wrap d-flex align-items-center">
                 <div class="col-lg-5 sm-padding">
                     <div class="about-bg wow fadeInLeft" data-wow-delay="100ms">
-                        <img src="img/DALL·E 2025-03-06 09.11.32 - An ultra-realistic digital portrait of a dark-skinned African man with a low-cut hairstyle, brown eyes, and well-groomed facial hair. He is wearing a  (1).webp" alt="img">
+                        <img src="img/about.jpg" alt="img">
                     </div>
                 </div>
                 <div class="col-lg-7 sm-padding">
