--- a/index.html
+++ b/index.html
@@ -155,32 +155,38 @@
                 <div class="col-lg-3 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="100ms">
                     <div class="service-item text-center">
                         <i class="icon-briefcase"></i>
-                        <h3><span>Smart Contract Dev</span></h3>
-                        <p>Articulate Your Smart Contract's Story to Engage Stakeholders.</p>
+                        <h3><span>Smart Contract Development</span></h3>
+                        <!-- <p>Articulate Your Smart Contract's Story to Engage Stakeholders.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="300ms">
                     <div class="service-item text-center">
                         <i class="icon-tools"></i>
-                        <h3><span>Web Development</span></h3>
-                        <p>Craft Your Website's Narrative to Captivate Users and Drive Conversions</p>
+                        <h3><span>Web & Mobile app Dev.</span></h3>
+                        <!-- <p>Craft Your Website's Narrative to Captivate Users and Drive Conversions</p> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="500ms">
                     <div class="service-item text-center">
                         <i class="icon-laptop"></i>
-                        <h3><span>Creative Consulting</span></h3>
-                        <p>Unleash Your Brand's Story to Captivate Clients and Amplify Success.</p>
+                        <h3><span>Shilling Services, Crypto NFTs</span></h3>
+                        <!-- <p>Unleash Your Brand's Story to Captivate Clients and Amplify Success.</p> -->
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="700ms">
                     <div class="service-item text-center">
                         <i class="icon-mobile"></i>
-                        <h3><span>Mobile Apps</span></h3>
-                        <p>Tell Your App's Story to Engage Users and Drive Downloads.</p>
+                        <h3><span>Crypto Logos & Stickers</span></h3>
+                        <!-- <p>Tell Your App's Story to Engage Users and Drive Downloads.</p> -->
                     </div>
                 </div>
             </div>
+
+            <a href="https://t.me/AZAM_DESTINY" class="default-btn wow fadeInUp" data-wow-delay="500ms" 
+   style="display: block; width: fit-content; margin: 60px auto 0; padding: 15px 30px; text-align: center;">
+   Hire Me!
+</a>
+
         </div>
     </section>
     <!--/.service-section-->
@@ -235,6 +241,7 @@
                     <li data-filter=".design">Crypto</li>
                     <li data-filter=".wordpress">Marketing</li>
                     <li data-filter=".marketing">NFTs</li>
+                    
                 </ul><!-- /.Work filter -->
                 <div class="row work-items wow fadeInUp" data-wow-delay="500ms">
                     <div class="col-md-4 col-sm-6 xs-padding single-item design wordpress">
@@ -382,7 +389,7 @@
                             </div>
                             <div class="form-group row wow fadeInUp" data-wow-delay="900ms">
                                 <div class="col-md-12">
-                                    <button id="submit" class="default-btn" type="submit">Send Message</button>
+                                    <button id="submit" class="default-btn" type="submit"><a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&ifkv=ASSHykqsWqrCKWtCHzYjOg72vOa9j0Rlyy2EbK-eWpz6BRU5e97gx-vUxEcyQYY5qUyFPwj2ntfXVA&osid=1&passive=1209600&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S959261218%3A1741254676486796&ddm=1" style="color: #fff;">Send Message</a></button>
                                 </div>
                             </div>
                             <div id="form-messages" class="alert" role="alert"></div>
@@ -398,7 +405,7 @@
         <div class="container">
             <div class="widget-content text-center">
                 <h2 class="wow fadeInUp" data-wow-delay="100ms">Let's get to work <span>!</span></h2>
-                <a class="mb-15 wow fadeInUp" data-wow-delay="200ms" href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&ifkv=ASSHykqsWqrCKWtCHzYjOg72vOa9j0Rlyy2EbK-eWpz6BRU5e97gx-vUxEcyQYY5qUyFPwj2ntfXVA&osid=1&passive=1209600&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S959261218%3A1741254676486796&ddm=1">Zamzamdestiny@gmail.com</a>
+                <a class="mb-15 wow fadeInUp" data-wow-delay="200ms" href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&ifkv=ASSHykqsWqrCKWtCHzYjOg72vOa9j0Rlyy2EbK-eWpz6BRU5e97gx-vUxEcyQYY5qUyFPwj2ntfXVA&osid=1&passive=1209600&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S959261218%3A1741254676486796&ddm=1">zamzamdestiny@gmail.com</a>
             </div>
         </div>
     </section>
@@ -409,7 +416,7 @@
             <div class="footer-wrap row">
                 <div class="col-md-6">
                     <ul class="footer-social">
-                        <li><a href="#">Facebook</a></li>
+                        <li><a href="https://t.me/AZAM_DESTINY">Telegram</a></li>
                         <li><a href=" https://www.instagram.com/destinysgg?igsh=MTNlemFmdGpjNzVxYw%3D%3D&utm_source=qr ">Instagram</a></li>
                         <li><a href="https://x.com/dosant45?s=21 ">X</a></li>
                     </ul>
@@ -425,6 +432,8 @@
 
     <a data-scroll href="#header" id="scroll-to-top"><i class="ti-angle-up"></i></a>
 
+    <!-- Include the SMTP.js library -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <!-- jQuery Lib -->
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
     <!-- Modernizr -->
